--- a/package.json
+++ b/package.json
@@ -9,12 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.0.4",
+    "@chakra-ui/react": "^2.2.4",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
+    "connect-mongo": "^4.6.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^6.5.0",
+    "iron-session": "^6.1.3",
+    "mongodb": "^4.8.0",
     "next": "12.2.2",
+    "next-connect": "^1.0.0-next.2",
+    "next-session": "^4.0.5",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^1.3.0",
+    "twilio": "^3.79.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "18.0.3",
+    "@types/passport": "^1.0.9",
+    "@types/passport-local": "^1.0.34",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
     "eslint": "8.19.0",
